sredevstack/sre-devstack-ingress-octavia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-devstack-ingress-octavia
  namespace: sre-devstack
  annotations:
    kubernetes.io/ingress.class: "openstack"
    octavia.ingress.kubernetes.io/internal: "false"
spec:
  rules:
  - host: codeserver.sredevstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: code-server-svc
             port:
               number: 80
  - host: nextcloud.sredevstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: nextcloud-ui-svc
             port:
               number: 80
  - host: wbo.sredevstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: white-board-svc
             port:
               number: 80
  - host: etherpad.sredevstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: etherpad-svc
             port:
               number: 80
